Fixed #1494 - Process Method Dialog - enable ISD checkbox